@@ -1,5 +1,6 @@
 package org.BananasAmIRite.NaturalSelectionSimulation.api.traitsapi;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 
 public class Traits {
@@ -9,8 +10,8 @@ public class Traits {
 
     }
 
-    public void addTrait(Class<? extends Trait> clazz) throws IllegalAccessException, InstantiationException {
-        Trait t = clazz.newInstance();
+    public void addTrait(Class<? extends Trait> clazz) throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
+        Trait t = clazz.getDeclaredConstructor().newInstance();
         data.put(t, t.getDefaultValue());
     }
 
